--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   <div class="container">
     <h2>BMI Calculator</h2>
     <div class="input-group">
-      <label for=
+      <label for="weight">Weight (kg):</label>
+      <input type="number" id="weight" step="0.01" required>
+    </div>
+    <div class="input-group">
+      <label for="height">Height (cm):</label>
+      <input type="number" id="height" required>
+    </div>
     <button onclick="calculateBMI()">Calculate BMI</button>
     <div id="result"></div>
   </div>
 
-
-  <h2>Kalu</h2>
   <script src="script.js"></script>
 </body>
 </html>
